# deep-research-agent

./: Dockerfile  Dockerfile.dev  agnt5.yaml  app.py  pyproject.toml
scripts/: run-dev.sh
src/simple_workflow/: __init__.py  functions.py
