[project]
name = "deep-research-agent"
version = "0.1.0"
description = "Deep Research Agent"
authors = [
    { name = "AGNT5 Devs", email = "devs@agnt5.com" }
]
dependencies = [
    "agnt5>=0.1.3",
    "pydantic>=2.9.2",
]
readme = "README.md"
requires-python = ">= 3.9"
keywords = ["agnt5", "workflow", "ai", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/agnt5/agnt5"
Documentation = "https://docs.agnt5.com"
Repository = "https://github.com/agnt5/agnt5"
"Bug Tracker" = "https://github.com/agnt5/agnt5/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
agnt5 = { path = "../../sdk/sdk-python", editable = true }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/simple_workflow"]

